# abc-fork

./: .gitignore  CMakeLists.txt  Makefile  README.md  environment.devenv.yml  tox.ini
.github/workflows/: build-posix-cmake.yml  build-windows.yml  ci.yml  codeql.yml  conda-dev.yml
src/aig/gia/: gia.h
src/base/abci/: abc.c
src/base/main/: abcapis.h  mainReal.c
src/bdd/cas/: casCore.c
src/map/if/: ifDsd.c
src/misc/util/: utilTruth.h
src/opt/dau/: dauCanon.c
src/opt/eslim/: eSLIMMan.tpp  selectionStrategy.tpp  utils.hpp
src/proof/cec/: cecSolveG.c
src/sat/msat/: msatSolverSearch.c
